added 3a HTML file

--- a/labs/lab03.html
+++ b/labs/lab03.html
@@ -39,41 +39,41 @@
 	<br />
 	<input type="radio" name="sex" id="sex" value="male" /> Male
 	<input type="radio" name="sex" id="sex" value="female" /> Female
-	<input type="radio" name="sex" id="sex" value="other" checked /> Other
+	<input type="radio" name="sex" id="sex" value="other" checked /> Prefer not to answer
 	<br /><br /><hr /><br />
 	<select name="class" id="class">
-		<option value="Kenneth">Kenneth</option>
-		<option value="Chet">Chet</option>
-		<option value="Jason">Jason</option>
-		<option value="Lee">Lee</option>
-		<option value="Ori">Ori</option>
-		<option value="Marsha">Marsha</option>
-		<option value="Xavier">Xavier</option>
-		<option value="Tyler">Tyler</option>
-		<option value="Chris">Chris</option>
+		<option value="Donald">Donald</option>
+		<option value="Barack">Barack</option>
+		<option value="W">W</option>
+		<option value="Slick Willy">Slick Willy</option>
+		<option value="George">George</option>
+		<option value="Ronnie">Ronnie</option>
+		<option value="Jimmy">Jimmy</option>
+		<option value="Jerry">Jerry</option>
+		<option value="Tricky Dick">Tricky Dick</option>
 	</select>
 	<br /><hr /><br />
 	<select name="class" id="class1" multiple>
-		<option value="Kenneth">Kenneth</option>
-		<option value="Chet">Chet</option>
-		<option value="Jason">Jason</option>
-		<option value="Lee">Lee</option>
-		<option value="Ori">Ori</option>
-		<option value="Marsha">Marsha</option>
-		<option value="Xavier">Xavier</option>
-		<option value="Tyler">Tyler</option>
-		<option value="Chris">Chris</option>
+		<option value="Donald">Donald</option>
+		<option value="Barack">Barack</option>
+		<option value="W">W</option>
+		<option value="Slick Willy">Slick Willy</option>
+		<option value="George">George</option>
+		<option value="Ronnie">Ronnie</option>
+		<option value="Jimmy">Jimmy</option>
+		<option value="Jerry">Jerry</option>
+		<option value="Tricky Dick">Tricky Dick</option>
 	</select><br /><hr /><br />
 	<select name="class" id="class2" size=7>
-		<option value="Kenneth">Kenneth</option>
-		<option value="Chet">Chet</option>
-		<option value="Jason">Jason</option>
-		<option value="Lee">Lee</option>
-		<option value="Ori">Ori</option>
-		<option value="Marsha">Marsha</option>
-		<option value="Xavier">Xavier</option>
-		<option value="Tyler">Tyler</option>
-		<option value="Chris">Chris</option>
+		<option value="Donald">Donald</option>
+		<option value="Barack">Barack</option>
+		<option value="W">W</option>
+		<option value="Slick Willy">Slick Willy</option>
+		<option value="George">George</option>
+		<option value="Ronnie">Ronnie</option>
+		<option value="Jimmy">Jimmy</option>
+		<option value="Jerry">Jerry</option>
+		<option value="Tricky Dick">Tricky Dick</option>
 	</select>
 	<br /><br /><hr /><br />
 	<textarea name="comment" id="comment" rows=4 cols=60>Leave your comment here</textarea>
